fix z-index of mask

--- a/src/css/components/mask.component.pcss
+++ b/src/css/components/mask.component.pcss
@@ -1,6 +1,6 @@
 #accessabar .ab-mask {
     position: fixed;
-    z-index: 10;
+    z-index: 2147483644;
     top: 0;
     left: 0;
     pointer-events: none;
